PDS: minor backend changes

--- a/PSB/backend/Dockerfile
+++ b/PSB/backend/Dockerfile
@@ -23,4 +23,4 @@ COPY . .
 # RUN flask gen_api
 
 # gunicorn
-CMD ["gunicorn", "--config", "gunicorn-cfg.py", "run:app"]
+CMD ["gunicorn", "--config", "gunicorn-cfg.py", "app:app"]
