fix nginx & docker

--- a/PSB/backend/nginx/appseed-app.conf
+++ b/PSB/backend/nginx/appseed-app.conf
@@ -1,12 +1,12 @@
 upstream scoring_app {
-    server scoring_app:5005;
+    server scoring_app_backend:5005;
 }
 
 server {
     listen 5085;
 
     location / {
-        proxy_pass http://scoring_app;
+        proxy_pass http://scoring_app_backend;
         proxy_set_header Host $host:$server_port;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
