--- a/PSB/backend/nginx/appseed-app.conf
+++ b/PSB/backend/nginx/appseed-app.conf
@@ -1,9 +1,9 @@
-upstream scoring_app {
+upstream scoring_app_backend {
     server scoring_app_backend:5005;
 }
 
 server {
-    listen 5085;
+    listen 80;
 
     location / {
         proxy_pass http://scoring_app_backend;
