changed github actions

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -16,7 +16,7 @@ jobs:
     permissions: 
       contents: read
       packages: read
-      statusses: write
+      statuses: write
 
     steps:
       - name: Checkout Code
