--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,10 +1,6 @@
 name: Lint Code
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: [push, pull_request]
 
 permissions: {}
 
@@ -27,4 +23,6 @@ jobs:
       - name: Lint Code
         uses: super-linter/super-linter@v7.4.0
         env:
+          VALIDATE_ALL_CODEBASE: true
+          VALIDATE_PYTHON_RUFF: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
