--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -24,6 +24,8 @@ jobs:
         uses: super-linter/super-linter@v7.4.0
         env:
           VALIDATE_ALL_CODEBASE: true
+          VALIDATE_PYTHON: true
           VALIDATE_PYTHON_RUFF: true
           VALIDATE_PYTHON_FLAKE8: true
+          FIX_PYTHON_RUFF: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
