--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -2,15 +2,15 @@ name: Lint Code
 
 on: [push, pull_request]
 
-permissions: {}
+permissions: 
+  contents: read
 
 jobs:
-  build:
+  lint:
     name: Lint Code
     runs-on: ubuntu-latest
     
     permissions: 
-      contents: read
       packages: read
       statuses: write
 
@@ -24,8 +24,38 @@ jobs:
         uses: super-linter/super-linter@v7.4.0
         env:
           VALIDATE_ALL_CODEBASE: true
-          VALIDATE_PYTHON: true
           VALIDATE_PYTHON_RUFF: true
           VALIDATE_PYTHON_FLAKE8: true
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
+  fix-lint-issues: 
+    permissions: 
+      contents: write
+      statuses: write
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v1
+        with: 
+          fetch-depth: 0
+
+      - name: Fix
+        uses: super-linter/super-linter@v7.4.0
+        env: 
+          VALIDATE_ALL_CODEBASE: true
+          VALIDATE_PYTHON: true
           FIX_PYTHON_RUFF: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Commit and push 
+        if: >
+          github.event_name == 'pull_request' &&
+          github.ref_name != github.event.repository.default_branch
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          branch: ${{ github.event.pull_request.head.ref || github.head_ref || github.ref }}
+          commit_message: "chore: fix linting issues"
+          commit_user_name: super-linter
+          commit_user_email: super-linter@super-linter.dev
