--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -2,13 +2,15 @@ name: Lint Code
 
 on: [push, pull_request]
 
+permissions: 
+  contents: read
+
 jobs:
   lint:
     name: Lint Code
     runs-on: ubuntu-latest
     
     permissions: 
-      contents: write
       packages: read
       statuses: write
 
@@ -21,11 +23,25 @@ jobs:
       - name: Lint Code
         uses: super-linter/super-linter@v7.4.0
         env:
-          VALIDATE_ALL_CODEBASE: true
           VALIDATE_PYTHON_RUFF: true
           VALIDATE_PYTHON_FLAKE8: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
+    
+  fix-lint-issues:
+    name: Fix and push
+
+    permissions: 
+      contents: write
+      statuses: write
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v1
+        with: 
+          fetch-depth: 0
+
       - name: Fix
         uses: super-linter/super-linter@v7.4.0
         env: 
@@ -44,4 +60,3 @@ jobs:
           commit_message: "chore: fix linting issues"
           commit_user_name: super-linter
           commit_user_email: super-linter@super-linter.dev
-  
