--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -46,7 +46,7 @@ jobs:
         uses: super-linter/super-linter@v7.4.0
         env: 
           VALIDATE_ALL_CODEBASE: true
-          VALIDATE_PYTHON: true
+          VALIDATE_PYTHON: false
           FIX_PYTHON_RUFF: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
